# Audio-Visualizer

./: LICENSE  gradle.properties  jitpack.yml  readme.md  settings.gradle.kts
.github/workflows/: release.yml
AudioVisualizer/: build.gradle.kts  consumer-rules.pro
AudioVisualizer/src/androidTest/java/com/sre404/audiovisualizer/: AudioConstants.kt  ExampleInstrumentedTest.kt
AudioVisualizer/src/androidTest/java/com/sre404/audiovisualizer/engine/: AudioEngine.kt  AudioProcessingMode.kt  NativeAudioProcessor.kt
AudioVisualizer/src/androidTest/java/com/sre404/audiovisualizer/input/: AudioInput.kt  AudioInputType.kt  MicAudioInput.kt  SystemAudioInput.kt
AudioVisualizer/src/androidTest/java/com/sre404/audiovisualizer/view/: BarVisualizerView.kt  BaseVisualizerView.kt  ColorMode.kt
AudioVisualizer/src/main/: AndroidManifest.xml
AudioVisualizer/src/main/cpp/: CMakeLists.txt  audio_processor.cpp
AudioVisualizer/src/main/res/values/: attrs.xml
AudioVisualizer/src/test/java/com/sre404/audiovisualizer/: ExampleUnitTest.kt
app/: build.gradle.kts
app/src/androidTest/java/com/sre404/visualizer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/visualizer/src/main/: AndroidManifest.xml
app/visualizer/src/test/java/com/sre404/visualizer/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
